deploy/2-service.yaml
apiVersion: v1
kind: Service
metadata:  
  name: hello-world
spec:
  selector:    
    app: hello-world
  type: ClusterIP
  ports:  
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
