deploy/deploy-all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: priyakant/hello-world-web-app:3.0.0
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:  
  name: hello-world
spec:
  selector:    
    app: hello-world
  type: ClusterIP
  ports:  
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-world
spec:
  backend:
    serviceName: hello-world
    servicePort: 80
# ---
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: hello-world
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /hello-world
#         backend:
#           serviceName: hello-world
#           servicePort: 80    
---
